// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dbUtils findCoreEntity Filter with a LIKE on ID 1`] = `"FOR el IN @@value0 FILTER LIKE(el.@value1, @value2, true) FILTER el.@value3 == @value4 FILTER LIKE(el.label.@value5, @value6, true) OR LIKE(el.label.@value7, @value6, true) RETURN el"`;

exports[`dbUtils findCoreEntity Filter with a LIKE on ID 2`] = `
Object {
  "@value0": "core_trees",
  "value1": "_key",
  "value2": "categories",
  "value3": "system",
  "value4": false,
  "value5": "fr",
  "value6": "Arbre des catégories",
  "value7": "en",
}
`;

exports[`dbUtils findCoreEntity Find core entity without filters 1`] = `"FOR el IN @@value0 RETURN el"`;

exports[`dbUtils findCoreEntity Find core entity without filters 2`] = `
Object {
  "@value0": "core_trees",
}
`;

exports[`dbUtils findCoreEntity Should filter label on any language 1`] = `"FOR el IN @@value0 FILTER LIKE(el.@value1, @value2, true) FILTER el.@value3 == @value4 FILTER LIKE(el.label.@value5, @value6, true) OR LIKE(el.label.@value7, @value6, true) RETURN el"`;

exports[`dbUtils findCoreEntity Should filter label on any language 2`] = `
Object {
  "@value0": "core_trees",
  "value1": "_key",
  "value2": "categories",
  "value3": "system",
  "value4": false,
  "value5": "fr",
  "value6": "Arbre des catégories",
  "value7": "en",
}
`;

exports[`dbUtils findCoreEntity Should limit results 1`] = `"FOR el IN @@value0 LIMIT @value1, @value2 RETURN el"`;

exports[`dbUtils findCoreEntity Should limit results 2`] = `
Object {
  "@value0": "core_trees",
  "value1": 0,
  "value2": 5,
}
`;
